--- a/Projeto/templates/Cadastro_Cliente.html
+++ b/Projeto/templates/Cadastro_Cliente.html
@@ -7,12 +7,11 @@
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <title>Cadastro de Produto</title>
+    <title>Cadastro de Cliente</title>
     <style>
         *{
-            /* color: #ffffff; */
-            font-size: 1.01em;
-            font-weight: 500; 
+            color: #ffffff;
+            font-weight: 400;
         }
         header{
             background-color: #3C3428;
@@ -21,99 +20,96 @@
         body{
             background-color: #916A30;
         }
+        span{
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1 class="text-center">Cadastro de Cliente</h1>    
     </header>
-    <main class="container w-75">
-        <form class="row g-3 needs-validation" novalidate id="formCadastroProduto">
-            <div class="input-group mb-3">
-                <span class="input-group-text">@</span>
-                <div class="form-floating">
-                  <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
-                  <label for="floatingInputGroup1">Username</label>
-                </div>
-            </div>
+    <main class="container w-50">
+        <form class="row g-3 mt-3 needs-validation" novalidate id="formCliente">
             <!-- ======================================================================= -->
+            <!-- ##### 1º Linha ##### -->
             <section class="row mt-4">
-                <!-- ############### Codigo ############### -->
-                <article class="col-md-2">
-                    <div>
-                        <label for="codigo" class="form-label">Código:</label>
-                        <input type="number" class="form-control" id="codigo" required>
-                        <div class="invalid-feedback">
-                            Por favor, informe o código do produto!
-                        </div>
+                <!-- ############### Nome Completo ############### -->
+                <article class="col-6">
+                    <div class="form-floating">
+                        <input type="text" class="form-control btn-dark" id="nome" placeholder="Nome completo">
+                        <label for="nome">Nome completo*</label>
+                        <span class="invalid-feedback">
+                            Por favor, informe seu nome completo!.
+                        </span>
                     </div>
                 </article>
-                <!-- ############### Validade ############### -->
-                <article class="col-md-2">
-                    <label for="dataValidade" class="form-label">Válido até:</label>
-                    <input type="date" class="form-control" id="dataValidade" required>
-                    <div class="invalid-feedback">
-                        Por favor, informe a data de validade!
-                    </div>
-                </article>
-                <!-- ############### Descrição ############### -->
-                <article class="col-md-8">
-                    <label for="descricao" class="form-label">Descrição:</label>
-                    <input type="text" class="form-control" id="descricao" required>
-                    <div class="invalid-feedback">
-                        Por favor, informe a descrição do produto!
+                <!-- ############### CPF ############### -->
+                <article class="col-6">
+                    <div class="form-floating">
+                        <input type="number" class="form-control btn-dark" id="cpf" placeholder="___.___.___-__">
+                        <label for="cpf">CPF*</label>
+                        <span class="invalid-feedback">
+                            Por favor, informe seu cpf: ___.___.___-__
+                        </span>
                     </div>
                 </article>
             </section>
+
             <!-- ======================================================================= -->
-            <section class="row mt-3">
-                <!-- ############### Preço Custo ############### -->
-                <article class="col-md-4">
-                    <label for="precoCusto" class="form-label">Preço de Custo:</label>
-                    <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">R$</span>
-                        <input type="number" class="form-control" id="precoCusto" aria-describedby="inputGroupPrepend"
-                            required>
-                        <div class="invalid-feedback">
-                            Por favor, informe o preço de custo.
-                        </div>
-                    </div>
+            <!-- ##### 2º Linha ##### -->
+            <section class="row mt-4">
+                <!-- ############### Genero ############### -->
+                <article class="col-6">
+                    <div class="form-floating">
+                        <select class="form-select btn-dark" id="genero" aria-label="Genero">
+                          <option selected>Nenhum</option>
+                          <option value="homem">Homem</option>
+                          <option value="mulher">Mulher</option>
+                          <option value="outros">Outros</option>
+                          <option value="nao_especificado">Não Especificado</option>
+                        </select>
+                        <label for="genero">Genero**</label>
+                        <span class="invalid-feedback">
+                            Por favor, selecione um genero!.
+                        </span>
+                      </div>
                 </article>
-                <!-- ############### Preço Venda ############### -->
-                <article class="col-md-4">
-                    <label for="precoVenda" class="form-label">Preço de Venda:</label>
-                    <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">R$</span>
-                        <input type="number" class="form-control" id="precoVenda" aria-describedby="inputGroupPrepend"
-                            required>
-                        <div class="invalid-feedback">
-                            Por favor, informe o preço de venda.
-                        </div>
-                    </div>
-                </article>
-                <!-- ############### Estoque ############### -->
-                <article class="col-md-4">
-                    <label for="qtdEstoque" class="form-label">Estoque:</label>
-                    <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">+</span>
-                        <input type="number" class="form-control" id="qtdEstoque" aria-describedby="inputGroupPrepend"
-                            required>
-                        <div class="invalid-feedback">
-                            Por favor, informe a quantidade em estoque deste produto.
-                        </div>
+                <!-- ############### Data de Nascimento ############### -->
+                <article class="col-6">
+                    <div class="form-floating">
+                        <input type="date" class="form-control btn-dark" id="dataNascimento" placeholder="Data de nascimento">
+                        <label for="dataNascimento">Data de nascimento*</label>
+                        <span class="invalid-feedback">
+                            Por favor, informe sua data de nascimento!.
+                        </span>
                     </div>
                 </article>
             </section>
+            
             <!-- ======================================================================= -->
-            <!-- ############### URL Imagem ############### -->
-            <section class="row mt-3">
-                <section class="col-md-12">
-                    <label for="urlImagem" class="form-label">URL da Imagem:</label>
-                    <input type="url" class="form-control" id="urlImagem" required>
-                    <div class="invalid-feedback">
-                        Por favor, informe a url da imagem deste produto!
+            <!-- ##### 3º Linha ##### -->
+            <section class="row mt-4">
+                <!-- ############### Telefone celular ############### -->
+                <article class="col-6">
+                    <div class="form-floating">
+                        <input type="tel" class="form-control btn-dark" id="telefone" placeholder="()____-____">
+                        <label for="telefone">Telefone celular*</label>
+                        <span class="invalid-feedback">
+                            Por favor, informe seu numero de telefone!.
+                        </span>
                     </div>
-                </section>
+                </article>
+                <!-- ############### E-mail ############### -->
+                <article class="col-6">
+                    <div class="form-floating">
+                        <input type="email" class="form-control btn-dark" id="email" placeholder="nome@exemplo.com">
+                        <label for="email">E-mail*</label>
+                        <span class="invalid-feedback">
+                            Por favor, informe seu email: nome@exemplo.com.
+                        </span>
+                    </div>
+                </article>
             </section>
             <!-- ======================================================================= -->
             <!-- ############### BUTTON ############### -->
@@ -125,8 +121,7 @@
         </form>
     </main>
     <!-- ======================================================================= -->
-    <div id="tabelaProdutos" class="container w-75 mt-4"></div>
-
+    <div id="tabelaClientes" class="container w-100 mt-4"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
