--- a/Projeto/templates/Cadastro_Cliente.html
+++ b/Projeto/templates/Cadastro_Cliente.html
@@ -9,11 +9,9 @@
         crossorigin="anonymous">
     <title>Cadastro de Cliente</title>
     <style>
-        *{
+        header{
             color: #ffffff;
             font-weight: 400;
-        }
-        header{
             background-color: #3C3428;
             padding: 1em 0;
         }
@@ -22,6 +20,9 @@
         }
         span{
             font-style: italic;
+        }
+        .form-control:focus::placeholder{
+            color:#000000;
         }
     </style>
 </head>
@@ -37,7 +38,7 @@
                 <!-- ############### Nome Completo ############### -->
                 <article class="col-6">
                     <div class="form-floating">
-                        <input type="text" class="form-control btn-dark" id="nome" placeholder="Nome completo">
+                        <input type="text" class="form-control" id="nome" placeholder="">
                         <label for="nome">Nome completo*</label>
                         <span class="invalid-feedback">
                             Por favor, informe seu nome completo!.
@@ -47,7 +48,7 @@
                 <!-- ############### CPF ############### -->
                 <article class="col-6">
                     <div class="form-floating">
-                        <input type="number" class="form-control btn-dark" id="cpf" placeholder="___.___.___-__">
+                        <input type="text" class="form-control" id="cpf" placeholder="___.___.___-__">
                         <label for="cpf">CPF*</label>
                         <span class="invalid-feedback">
                             Por favor, informe seu cpf: ___.___.___-__
@@ -62,12 +63,12 @@
                 <!-- ############### Genero ############### -->
                 <article class="col-6">
                     <div class="form-floating">
-                        <select class="form-select btn-dark" id="genero" aria-label="Genero">
-                          <option selected>Nenhum</option>
-                          <option value="homem">Homem</option>
-                          <option value="mulher">Mulher</option>
-                          <option value="outros">Outros</option>
-                          <option value="nao_especificado">Não Especificado</option>
+                        <select class="form-select" id="genero">
+                          <option selected value=""></option>
+                          <option value="Não especificado">Não Especificado</option>
+                          <option value="Homem">Homem</option>
+                          <option value="Mulher">Mulher</option>
+                          <option value="Outros">Outros</option>
                         </select>
                         <label for="genero">Genero**</label>
                         <span class="invalid-feedback">
@@ -78,7 +79,7 @@
                 <!-- ############### Data de Nascimento ############### -->
                 <article class="col-6">
                     <div class="form-floating">
-                        <input type="date" class="form-control btn-dark" id="dataNascimento" placeholder="Data de nascimento">
+                        <input type="date" class="form-control" id="dataNascimento" placeholder="">
                         <label for="dataNascimento">Data de nascimento*</label>
                         <span class="invalid-feedback">
                             Por favor, informe sua data de nascimento!.
@@ -93,7 +94,7 @@
                 <!-- ############### Telefone celular ############### -->
                 <article class="col-6">
                     <div class="form-floating">
-                        <input type="tel" class="form-control btn-dark" id="telefone" placeholder="()____-____">
+                        <input type="tel" class="form-control" id="telefone" placeholder="( )_____-____">
                         <label for="telefone">Telefone celular*</label>
                         <span class="invalid-feedback">
                             Por favor, informe seu numero de telefone!.
@@ -103,7 +104,7 @@
                 <!-- ############### E-mail ############### -->
                 <article class="col-6">
                     <div class="form-floating">
-                        <input type="email" class="form-control btn-dark" id="email" placeholder="nome@exemplo.com">
+                        <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com">
                         <label for="email">E-mail*</label>
                         <span class="invalid-feedback">
                             Por favor, informe seu email: nome@exemplo.com.
@@ -112,16 +113,31 @@
                 </article>
             </section>
             <!-- ======================================================================= -->
+
+            <!-- ======================================================================= -->
+            <!-- ##### 4º Linha ##### -->
+            <section class="row mt-4">
+                <!-- ############### Endereço ############### -->
+                <article class="col-12">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="endereco" placeholder="Rua/Avenida... Nº... Cidade... CEP... UF...">
+                        <label for="endereco">Endereço*</label>
+                        <span class="invalid-feedback">
+                            Por favor, informe seu endereço!, EX: Rua Te Achei Nº420 Barretos 14783-252 SP
+                        </span>
+                    </div>
+                </article>
+            </section>
             <!-- ############### BUTTON ############### -->
             <nav class="mt-4">
                 <div class="col-15">
-                    <button class="btn btn-primary" type="submit">Confirmar</button>
+                    <button class="btn btn-success" type="submit">Confirmar</button>
                 </div>
             </nav>
         </form>
     </main>
     <!-- ======================================================================= -->
-    <div id="tabelaClientes" class="container w-100 mt-4"></div>
+    <div id="tabelaClientes" class="container mt-4"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
