--- a/Projeto/templates/Cadastro_Produto.html
+++ b/Projeto/templates/Cadastro_Produto.html
@@ -9,12 +9,13 @@
         crossorigin="anonymous">
     <title>Cadastro de Produto</title>
     <style>
-        *{
+        form{
             color: #ffffff;
             font-size: 1.01em;
             font-weight: 500; 
         }
         header{
+            color: #ffffff;
             background-color: #3C3428;
             padding: 1em 0;
         }
