--- a/Projeto/templates/Cadastro_Produto.html
+++ b/Projeto/templates/Cadastro_Produto.html
@@ -9,28 +9,81 @@
         crossorigin="anonymous">
     <title>Cadastro de Produto</title>
     <style>
-        form{
-            color: #ffffff;
+form{
             font-size: 1.01em;
             font-weight: 500; 
         }
-        header{
-            color: #ffffff;
-            background-color: #3C3428;
-            padding: 1em 0;
-        }
         body{
-            background-color: #916A30;
+            background-color: #ffffff;
         }
         span{
             font-style: italic;
         }
+        .tabela{
+            max-width: 400px;
+            width: 100%;
+            overflow: hidden;
+        }
+        .form-control:focus::placeholder{
+            color:#000000;
+        }
+        #titulo {
+            text-align: center;
+            width: 75%;
+            margin: auto;
+            padding: 10px;
+            border: 1px solid rgb(53, 4, 4);
+            border-radius: 0px 20px 0px 20px;
+            font-weight: bold;
+            color: rgb(53, 4, 4);
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1 class="text-center">Cadastro de Produto</h1>    
-    </header>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid custom-navbar-bg">
+                <button style="color:rgb(53, 4, 4); background-color: bisque;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div style="color:rgb(53, 4, 4); background-color: bisque;" class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                    <b>
+                    <ul class="navbar-nav mr-auto" >
+                        
+                        <li class="nav-item" style="color:rgb(53, 4, 4); background-color: bisque;">
+                            <a class="nav-link active" aria-current="page" href="Index.html">VOLTAR </a>
+                        </li>
+                        <img src="../img/enfeite.png" alt="enfeite" width="30" height="30" class="d-inline-block align-text-top" style="margin-top: 5px;" >
+                    
+                    </ul>
+                    </b>
+        
+                    <a class="navbar-brand d-flex justify-content-center" href="#">
+                        <img src="../img/bitstich-logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top" style="margin-left: 0;">
+                    </a>
+                
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item d-flex align-items-center">
+                            <img src="../img/wpp-logo.png" alt="Wpp" width="40" height="40" class="d-inline-block align-text-top">
+                            <a class="nav-link disabled" aria-disabled="true">(XX)XXXXX-XXXX</a>
+                        </li>
+                        <li class="nav-item d-flex align-items-center">
+                            <img src="../img/insta-logo.png" alt="Insta" width="40" height="40" class="d-inline-block align-text-top">
+                            <a class="nav-link disabled" aria-disabled="true">@BitStich_Store</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+    </div>
+
+    <div class="container w-25">
+        <h3 id="titulo" class="my-5">
+            CADASTRO DE PRODUTO
+        </h3>
+    </div>
+
     <main class="container w-75">
         <form class="row g-3 needs-validation" novalidate id="formCadastroProduto">
             <!-- ======================================================================= -->
