--- a/Projeto/templates/Cadastro_Usuario.html
+++ b/Projeto/templates/Cadastro_Usuario.html
@@ -13,14 +13,8 @@
             font-size: 1.01em;
             font-weight: 500; 
         }
-        header{
-            color: #ffffff;
-            font-weight: 400;
-            background-color: #3C3428;
-            padding: 1em 0;
-        }
         body{
-            background-color: #916A30;
+            background-color: #ffffff;
         }
         span{
             font-style: italic;
@@ -33,99 +27,152 @@
         .form-control:focus::placeholder{
             color:#000000;
         }
+        #titulo {
+            text-align: center;
+            width: 75%;
+            margin: auto;
+            padding: 10px;
+            border: 1px solid rgb(53, 4, 4);
+            border-radius: 0px 20px 0px 20px;
+            font-weight: bold;
+            color: rgb(53, 4, 4);
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1 class="text-center">Cadastro de Usuário</h1>    
-    </header>
-    <main class="container w-50 tabela">
-        <form class="row g-3 mt-3 needs-validation" novalidate id="formCadUsuario">
-            <!-- ======================================================================= -->
-            <!-- ##### 1º Linha ##### -->
-            <section class="row mt-4">
-                <!-- ############### Nome de Usuário ############### -->
-                <article>
-                    <div class="form-floating">
-                        <input type="text" class="form-control" id="usuario" placeholder="" required>
-                        <label for="usuario">Nome de Usuário</label>
-                        <span class="invalid-feedback">
-                            Por favor, informe seu nome de usuário!
-                        </span>
-                    </div>
-                </article>
-            </section>
-            <!-- ======================================================================= -->
-            <!-- ##### 2º Linha ##### -->
-            <section class="row mt-4">
-                <!-- ############### E-mail ############### -->
-                <article>
-                    <div class="form-floating">
-                        <input type="text" class="form-control" id="email" placeholder="nome@exemplo.com" required>
-                        <label for="email">E-mail</label>
-                        <span class="invalid-feedback">
-                            Por favor, informe seu e-mail!
-                        </span>
-                    </div>
-                </article>
-            </section>            
-            <!-- ======================================================================= -->
-            <!-- ##### 3º Linha ##### -->
-            <section class="row mt-4">
-                <!-- ############### Senha ############### -->
-                <article>
-                    <div class="form-floating">
-                        <input type="password" class="form-control" id="senha" placeholder="*******" required>
-                        <label for="senha">Senha</label>
-                        <span class="invalid-feedback">
-                            Por favor, informe sua senha!
-                        </span>
-                    </div>
-                </article>
-            </section>
-            <!-- ======================================================================= -->
-            <!-- ##### 4º Linha ##### -->
-            <section class="row mt-4">
-                <!-- ############### Confirmação de Senha ############### -->
-                <article>
-                    <div class="form-floating">
-                        <input type="password" class="form-control" id="senha_confirmacao" placeholder="*******" required>
-                        <label for="senha-confirmacao">Confirmação da Senha</label>
-                        <span class="invalid-feedback">
-                            Por favor, informe a confirmação de senha!
-                        </span>
-                    </div>
-                </article>
-            </section>
-            <!-- ======================================================================= -->
-            <!-- ##### 5º Linha ##### -->
-            <section class="row mt-4">
-                <!-- ############### Perfil ############### -->
-                <article>
-                    <div class="form-floating">
-                        <select class="form-select" id="perfil" required>
-                            <option value="" selected>Nenhum</option>
-                            <option value="Admin">Admin</option>
-                            <option value="Visitante">Visitante</option>
-                            <option value="Normal">Normal</option>
-                        </select>
-                        <label for="perfil">Perfil</label>
-                        <span class="invalid-feedback">
-                            Por favor, selecione um tipo de perfil!
-                        </span>
-                    </div>
-                </article>
-            </section>
-            <!-- ############### BUTTON ############### -->
-            <nav class="mt-4">
-                <div class="col-15">
-                    <button class="btn btn-success" type="submit">Confirmar</button>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid custom-navbar-bg">
+                <button style="color:rgb(53, 4, 4); background-color: bisque;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div style="color:rgb(53, 4, 4); background-color: bisque;" class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                    <b>
+                    <ul class="navbar-nav mr-auto" >
+                        
+                        <li class="nav-item" style="color:rgb(53, 4, 4); background-color: bisque;">
+                            <a class="nav-link active" aria-current="page" href="Index.html">VOLTAR </a>
+                        </li>
+                        <img src="../img/enfeite.png" alt="enfeite" width="30" height="30" class="d-inline-block align-text-top" style="margin-top: 5px;" >
+                    
+                    </ul>
+                    </b>
+        
+                    <a class="navbar-brand d-flex justify-content-center" href="#">
+                        <img src="../img/bitstich-logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top" style="margin-left: 0;">
+                    </a>
+                
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item d-flex align-items-center">
+                            <img src="../img/wpp-logo.png" alt="Wpp" width="40" height="40" class="d-inline-block align-text-top">
+                            <a class="nav-link disabled" aria-disabled="true">(XX)XXXXX-XXXX</a>
+                        </li>
+                        <li class="nav-item d-flex align-items-center">
+                            <img src="../img/insta-logo.png" alt="Insta" width="40" height="40" class="d-inline-block align-text-top">
+                            <a class="nav-link disabled" aria-disabled="true">@BitStich_Store</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </form>
-    </main>
-    <!-- ======================================================================= -->
-    <div id="tabela" class="container w-75 mt-4"></div>
+            </div>
+        </nav>
+        
+    </div>
+
+    <div class="container w-25">
+        <h3 id="titulo" class="my-5">
+            CADASTRO DE USUÁRIO
+        </h3>
+    </div>
+
+    <div  class="container-fluid">
+        <main class="container w-50 tabela">
+            <form class="row g-3 mt-3 needs-validation" novalidate id="formCadUsuario">
+                <!-- ======================================================================= -->
+                <!-- ##### 1º Linha ##### -->
+                <section class="row mt-4">
+                    <!-- ############### Nome de Usuário ############### -->
+                    <article>
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="usuario" placeholder="" required>
+                            <label for="usuario">Nome de Usuário</label>
+                            <span class="invalid-feedback">
+                                Por favor, informe seu nome de usuário!
+                            </span>
+                        </div>
+                    </article>
+                </section>
+                <!-- ======================================================================= -->
+                <!-- ##### 2º Linha ##### -->
+                <section class="row mt-4">
+                    <!-- ############### E-mail ############### -->
+                    <article>
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="email" placeholder="nome@exemplo.com" required>
+                            <label for="email">E-mail</label>
+                            <span class="invalid-feedback">
+                                Por favor, informe seu e-mail!
+                            </span>
+                        </div>
+                    </article>
+                </section>            
+                <!-- ======================================================================= -->
+                <!-- ##### 3º Linha ##### -->
+                <section class="row mt-4">
+                    <!-- ############### Senha ############### -->
+                    <article>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="senha" placeholder="*******" required>
+                            <label for="senha">Senha</label>
+                            <span class="invalid-feedback">
+                                Por favor, informe sua senha!
+                            </span>
+                        </div>
+                    </article>
+                </section>
+                <!-- ======================================================================= -->
+                <!-- ##### 4º Linha ##### -->
+                <section class="row mt-4">
+                    <!-- ############### Confirmação de Senha ############### -->
+                    <article>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="senha_confirmacao" placeholder="*******" required>
+                            <label for="senha-confirmacao">Confirmação da Senha</label>
+                            <span class="invalid-feedback">
+                                Por favor, informe a confirmação de senha!
+                            </span>
+                        </div>
+                    </article>
+                </section>
+                <!-- ======================================================================= -->
+                <!-- ##### 5º Linha ##### -->
+                <section class="row mt-4">
+                    <!-- ############### Perfil ############### -->
+                    <article>
+                        <div class="form-floating">
+                            <select class="form-select" id="perfil" required>
+                                <option value="" selected>Nenhum</option>
+                                <option value="Admin">Admin</option>
+                                <option value="Visitante">Visitante</option>
+                                <option value="Normal">Normal</option>
+                            </select>
+                            <label for="perfil">Perfil</label>
+                            <span class="invalid-feedback">
+                                Por favor, selecione um tipo de perfil!
+                            </span>
+                        </div>
+                    </article>
+                </section>
+                <!-- ############### BUTTON ############### -->
+                <nav class="mt-4">
+                    <div class="col-15">
+                        <button class="btn btn-success" type="submit">Confirmar</button>
+                    </div>
+                </nav>
+            </form>
+        </main>
+        <!-- ======================================================================= -->
+        <div id="tabela" class="container w-75 mt-4"></div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
