--- a/Projeto/templates/Index.html
+++ b/Projeto/templates/Index.html
@@ -25,16 +25,16 @@
                 <button style="color:rgb(53, 4, 4); background-color: bisque;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div style="color:rgb(53, 4, 4); background-color: bisque;" class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                <div style="color:#350404; background-color: bisque;" class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <b>
                     <ul class="navbar-nav mr-auto" >
                         
                         <li class="nav-item" style="color:rgb(53, 4, 4); background-color: bisque;">
-                            <a class="nav-link active" aria-current="page" href="#">SOBRE </a>
+                            <a class="nav-link active" aria-current="page" href="Cadastro_Produto.html">LISTA DE PRODUTOS </a>
                         </li>
                         <img src="../img/enfeite.png" alt="enfeite" width="30" height="30" class="d-inline-block align-text-top" style="margin-top: 5px;" >
                         <li class="nav-item" style="color:rgb(53, 4, 4); background-color: bisque;">
-                            <a class="nav-link active" href="#">CADASTRE-SE</a>
+                            <a class="nav-link active" href="Cadastro_Usuario.html">LISTA DE USUÁRIOS</a>
                         </li>
                     
                     </ul>
