--- a/Projeto/templates/Cadastro_Produto.html
+++ b/Projeto/templates/Cadastro_Produto.html
@@ -7,6 +7,7 @@
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Cadastro de Produto</title>
     <style>
         form{
@@ -14,7 +15,7 @@
             font-weight: 500; 
         }
         body{
-            background-color: #ffffff;
+            background-color: #d6ae7c
         }
         span{
             font-style: italic;
@@ -74,7 +75,7 @@
     </nav>  
 
     <div class="corFundo pt-5">
-        <div class="container w-25">
+        <div class="container w-50">
             <h3 id="titulo" style="background-color: #ffe4c4;">
                 CADASTRO DE PRODUTO
             </h3>
