--- a/Projeto/templates/Index.html
+++ b/Projeto/templates/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bit Stich</title>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <style>
         .carousel-item img {
             display: block;
@@ -16,7 +17,7 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body style="background-color: #F8F9FA; font-family: cursive;">
+<body style="background-color: #d6ae7c; font-family: cursive;">
     
     <!-- ============================================================================================================================ -->
     <!-- ########## Barra Navegação ########## -->
