--- a/Projeto/Frontend/templates/Cadastro_Produto.html
+++ b/Projeto/Frontend/templates/Cadastro_Produto.html
@@ -180,4 +180,5 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous">
 </script>
+<script src="../scripts/Cadastro_Produto.js"></script>
 </html>
