--- a/Loja-LP1/Projeto/Frontend/templates/Cadastro_Cliente.html
+++ b/Loja-LP1/Projeto/Frontend/templates/Cadastro_Cliente.html
@@ -197,4 +197,5 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous">
 </script>
+<script src="../scripts/Cadastro_Cliente.js"></script>
 </html>
