--- a/Loja-LP1/Projeto/Frontend/templates/Cadastro_Fornecedor.html
+++ b/Loja-LP1/Projeto/Frontend/templates/Cadastro_Fornecedor.html
@@ -165,4 +165,5 @@ form{
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous">
 </script>
+<script src="../scripts/Cadastro_Fornecedor.js"></script>
 </html>
