--- a/Loja-LP1/Projeto/Frontend/templates/Cadastro_Usuario.html
+++ b/Loja-LP1/Projeto/Frontend/templates/Cadastro_Usuario.html
@@ -176,4 +176,5 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous">
 </script>
+<script src="../scripts/Cadastro_Usuario.js"></script>
 </html>
