--- a/Projeto/Frontend/templates/Cadastro_Produto.html
+++ b/Projeto/Frontend/templates/Cadastro_Produto.html
@@ -168,7 +168,7 @@
                 <!-- ############### BUTTON ############### -->
                 <nav class="pt-4">
                     <div class="col-15">
-                        <button class="btn btn-success" type="submit">Confirmar</button>
+                        <button class="btn btn-success" type="submit" id="botao">Confirmar</button>
                     </div>
                 </nav>
             </form>
