--- a/Projeto/Frontend/templates/Cadastro_Cliente.html
+++ b/Projeto/Frontend/templates/Cadastro_Cliente.html
@@ -184,7 +184,7 @@
                 <!-- ############### BUTTON ############### -->
                 <nav class="mt-4">
                     <div class="col-15">
-                        <button class="btn btn-success" type="submit">Confirmar</button>
+                        <button class="btn btn-success" type="submit" id="botao">Confirmar</button>
                     </div>
                 </nav>
             </form>
@@ -197,4 +197,5 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous">
 </script>
+<script src="../scripts/Cadastro_Cliente.js"></script>
 </html>
