--- a/Projeto/Frontend/templates/Cadastro_Usuario.html
+++ b/Projeto/Frontend/templates/Cadastro_Usuario.html
@@ -84,15 +84,15 @@
 
     <div class="container-fluid corFundo pb-4">
         <main class="container w-50 tabela" >
-            <form class="row g-3 mt-3 needs-validation" novalidate id="formCadUsuario">
+            <form class="row g-3 mt-3 needs-validation" novalidate id="formUsuario">
                 <!-- ======================================================================= -->
                 <!-- ##### 1º Linha ##### -->
                 <section class="row mt-4">
                     <!-- ############### Nome de Usuário ############### -->
                     <article>
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="usuario" placeholder="" required>
-                            <label for="usuario">Nome de Usuário</label>
+                            <input type="text" class="form-control" id="nome" placeholder="" required>
+                            <label for="nome">Nome de Usuário</label>
                             <span class="invalid-feedback">
                                 Por favor, informe seu nome de usuário!
                             </span>
@@ -163,7 +163,7 @@
                 <!-- ############### BUTTON ############### -->
                 <nav class="mt-4">
                     <div class="col-15">
-                        <button class="btn btn-success" type="submit">Confirmar</button>
+                        <button class="btn btn-success" type="submit" id="botao">Confirmar</button>
                     </div>
                 </nav>
             </form>
@@ -176,4 +176,5 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous">
 </script>
+<script src="../scripts/Cadastro_Usuario.js"></script>
 </html>
